# btc-usd-research

./: README.md  pyproject.toml  requirements.txt
scripts/: run_study.py  study_menu.py
src/pm_candle_odds/: __init__.py  analysis.py  data.py  pipeline.py  plots.py
src/prediction_market_candle_odds.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
