[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-market-candle-odds"
version = "0.1.0"
description = "Multi-timeframe candle odds research for prediction market hypotheses"
requires-python = ">=3.9"
dependencies = [
  "ccxt>=4.3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
